# simplexity-immui2025

./: .gitignore  README.md  requirements.txt
GazeTracking/: .gitignore  requirements.txt  simplexity.py  train_model.py  yt_example_v1.py  yt_v2.py
GazeTracking/gaze_tracking/: analysis.py  dataset.py
GazeTracking/tests/: diagnostic_test.py
demo/: FaceFeatureExtractor.py  annotation_popup.py  concentration_percentage_widget.py  config.py  dashboard_osc_handler.py  dashboard_window.py  eyeGesturesWrapper.py  eyegesturesv3_demo.py  hover_text_edit.py  main.py  main_window.py  osc.py  osc_handler.py  osc_utils.py  pyproject.toml  requirements.txt  student_chart_widget.py  student_indicator_widget.py  webcam_processor.py  webcam_viewer.py  yt_EngagementPredictor.py
dyslex/: .gitignore  README.md  classifier.py  feature_extractor.py  model_training.ipynb  models.py  output_result_convertor.ipynb  properties.json  requirements.txt  utils.py  yt_debug.py  yt_extract_features_t4.py  yt_patch_columns.py  yt_renaming.py  yt_train_mlp_t4.py  yt_train_model.py
face-track/: EngagementPredictor.py  FaceFeatureExtractor.py  main.py  requirements.txt
speech/: pyproject.toml  speech_analyzer.py
student_ui/: osc_handler.py
ui/: dashboard.py  main.py  pyproject.toml  requirements.txt
utils/: config.py  osc_server.py
